--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -14,7 +14,7 @@
       <input type="email" id="admin-email" placeholder="Email" required>
       <input type="password" id="admin-password" placeholder="Password" required>
       <button type="submit">Login</button>
-      <a href="admin-dashboard.html" class="back-btnl">Back to Dashboard</a>
+      <a href="index.html" class="back-btnl">Back to Home Page</a>
     </form>
   </div>
 
