--- a/public/delete-news.html
+++ b/public/delete-news.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Изтриване на новини</title>
-  <link rel="stylesheet" href="css/admin.css">
   <link rel="stylesheet" href="css/delete-news.css">
-
+  
   
 </head>
 <body>
@@ -19,7 +20,7 @@
     </div>
     <div class="news-list">
       <!-- News items will be displayed here -->
-      <a href="admin-dashboard.html" class="back-btn">Към панела</a>
+      <a href="admin-dashboard.html"></a><button type="button" class="btn btn-primary">Обратно към администраторския панел</button></a>
     </div>
     
   </div>
