--- a/public/delete-user.html
+++ b/public/delete-user.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Изтриване на потребители</title>
   <link rel="stylesheet" href="css/admin.css">
-
+  <link rel="stylesheet" href="css/delete-user.css">
 </head>
 <body>
   <div class="dashboard-container">
