--- a/public/send-news.html
+++ b/public/send-news.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Изпращане на новини</title>
@@ -14,7 +16,7 @@
       <form id="send-news-form">
         <input type="text" id="news-title" placeholder="Име на новината" required>
         <textarea id="news-content" placeholder="Съдържание на новината" rows="5" required></textarea>
-        <button type="submit">Изпращане на новини</button>
+        <button type="submit" class="submit-btn">Изпращане на новини</button>
         <a href="admin-dashboard.html" class="back-btn">Обратно към администраторския панел</a>
       </form>
     </div>
