--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main1.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar-first.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="scripts/script-navbar-first.js"></script>
@@ -27,14 +27,14 @@
             </ul>
         </nav>
     </header>
-
+    <main>
     <section class="real-time-info">
         <section class="nov">
             <h2>Новини</h2>
             <ul id="novList"></ul>
         </section>
     </section>
-
+</main>
     <footer>
         <ul class="footer-links">
             <li><a href="/privacy.html">Политика за поверителност</a></li>
