--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
+            <div class="logo1">
                 <a href="index.html"><h1>Пловдив транспорт</h1></a>
             </div>
         </nav>
