--- a/public/registration.html
+++ b/public/registration.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
+            <div class="logo1">
                 <a href="index.html"><h1>Пловдив транспорт</h1></a>
             </div>
         </nav>
