--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Начална станица</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar-first.css">
     <link rel="stylesheet" href="css/index.css">
