--- a/public/registration.html
+++ b/public/registration.html
@@ -5,7 +5,7 @@
  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Bus Transportation Plovdiv</title>
+    <title>Регистрация</title>
     <link rel="stylesheet" href="css/register.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar-first.css">
